tests/should_fail/match_char_on_int_value.nv
module fail
// Char literal on int match — type mismatch
let n = 42
let r = match n {
    'x' => "bad",
    _ => "ok",
}
